# paste-bin-rust

./: Cargo.toml  README.md  pastes.db
src/: index.html  main.rs  style.css
