[package]
name = "pastebin-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.8"
actix-files = "0.5"
serde = { version = "1.0", features = ["derive"] }
